# myrm-agent

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  README_zh.md  SECURITY.md  _ARCH.md  create_mock_drafts.py
myrm-agent-desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  command_registry_macro.in  entitlements.plist  tauri.conf.json
myrm-agent-desktop/src-tauri/capabilities/: default.json
myrm-agent-desktop/src-tauri/frontend-shell/: _ARCH.md  index.html
myrm-agent-desktop/src-tauri/icons/: icon.icns
myrm-agent-desktop/src-tauri/src/: _ARCH.md  cli_agent_types.rs  config.rs  ipc_security.rs  lifecycle.rs  main.rs  tray.rs  tunnel.rs
myrm-agent-server/: .cursorindexingignore  .env.example  .env.sandbox.example  .env.test.example  .estop_state.json  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  _ARCH.md  deploy.py  docker-compose.yaml  pyproject.toml  run.py  update_roadmap.py
myrm-agent-server/.github/workflows/: test.yml
myrm-agent-server/app/: _ARCH.md  __init__.py  lifecycle_tasks.py  main.py
myrm-agent-server/app/adapters/: _ARCH.md  __init__.py
myrm-agent-server/app/ai_agents/: _ARCH.md  __init__.py  agents.py  custom_agent_factory.py  personality_templates.py  subagent_catalog.py  subagent_presets.py  team_protocol.py
myrm-agent-server/app/api/: _ARCH.md  __init__.py  approvals.py  dependencies.py  external_agents.py  mcp_endpoint.py  router.py  workspace_rules.py
myrm-agent-server/app/channels/: CHANNELS_SYSTEM.md  _ARCH.md  __init__.py  inbound_profile.py
myrm-agent-server/app/config/: _ARCH.md  browser.py  change_tracker.py  computer_use_deploy.py  deploy_identity.py  deploy_mode.py  env.py  external_cli_deploy.py  logging.py  migrator.py  pre_flight.py  settings.py  system_status.py
myrm-agent-server/app/core/: _ARCH.md  __init__.py
myrm-agent-server/app/database/: _ARCH.md  allowlist_store.py  backup.py  connection.py  db_operational_handlers.py  dto.py  factory.py  legacy_canvas_cleanup.py  migrations.py  postgres_transient.py  recovery.py  sqlite_storage_busy.py  standard_responses.py
myrm-agent-server/app/lifecycle/: _ARCH.md  __init__.py  browser.py  harness_bridge.py  memory_guardian.py  monitors.py  pattern_discovery_trigger.py  schedulers.py  skills.py  system.py  task_worker.py
myrm-agent-server/app/middleware/: _ARCH.md  __init__.py  auth.py  auth_alert.py  auth_audit.py  cache.py  e2ee.py  host_allowlist.py  ingress.py  max_body_size.py  observability.py  security.py  session_idle.py  text_sanitizer_middleware.py  webhook_security.py  ws_auth.py
myrm-agent-server/app/platform_utils/: _ARCH.md  __init__.py  deployment_capabilities.py  execution.py  protocols.py  workspace_root.py  workspace_session.py
myrm-agent-server/app/remote_access/: _ARCH.md  __init__.py  e2ee_crypto.py  e2ee_keystore.py  e2ee_response.py  e2ee_session.py  e2ee_sse.py  mobile_deep_link.py  mobile_gate.py  pairing.py  pairing_links.py  tool_policy.py  trust_zone.py  tunnel_manager.py
myrm-agent-server/app/schemas/: _ARCH.md  __init__.py  config.py  control_plane.py  streaming.py
myrm-agent-server/app/server/: _ARCH.md  exceptions.py  lifespan.py  middlewares.py  openapi_security.py  runtime_dev_info.py  shutdown.py  stack_epoch.py  status.py  warmup.py
myrm-agent-server/app/services/: _ARCH.md  reasoning_content_manager.py
myrm-agent-server/app/startup/: _ARCH.md  __init__.py  config_check.py  env_loader.py  granian_runner.py  health_check.py  local_search_bootstrap.py  server_lock.py  uvicorn_runner.py
myrm-agent-server/app/tasks/: _ARCH.md  __init__.py  cleanup.py  events.py  idle_tool_pruner.py  image_config_resolver.py  metrics.py  task_payload_crypto.py  video_config_resolver.py  worker.py
myrm-agent-server/assets/: _ARCH.md  cookbook_specs.json
myrm-agent-server/assets/prebuilt_agents/: batch_processing_assistant.yaml  competitor_analyst.yaml  content_creation_squad.yaml  customer_service_squad.yaml  database_diagnostics_expert.yaml  frontend_development_expert.yaml  office_document_assistant.yaml  research_analysis_squad.yaml  software_dev_squad.yaml  ui_design_expert.yaml  web_crawler_expert.yaml
myrm-agent-server/assets/prebuilt_skills/: __init__.py
myrm-agent-server/deployments/: _ARCH.md
myrm-agent-server/deployments/prometheus/: rules.yml
myrm-agent-server/docker/: Dockerfile.official  _ARCH.md  entrypoint.sh  install_harness_wheels.sh  read_harness_pypi_spec.py
myrm-agent-server/docker/sandbox/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  _ARCH.md  benchmark.sh  build.sh  deep_health_check.py  matplotlibrc  pyproject.toml  test_image.py
myrm-agent-server/scripts/: _ARCH.md  check_file_line_budget.py  check_fractal_docs.py  cleanup_qdrant_locks.py  cli.py  deploy.py  init-age.sql  run_myrm_core_coverage_gate.sh  sync_arch_file_tables.py
myrm-agent-server/scripts/ci/: _ARCH.md  file_line_budget_baseline.txt  lib_harness_deps.sh  run_architecture_gates.sh  run_default_tests.sh
myrm-agent-server/scripts/deploy_pkg/: actions.py  checks.py  constants.py  docker_core.py  modes.py  postgres.py  utils.py
myrm-agent-server/scripts/dev/: _ARCH.md  profile_test_memory.py  render_ui_chrome_verify.py  run_tests_low_memory.sh  wfel-settings-ui-check.py
myrm-agent-server/searxng/: _ARCH.md  limiter.toml  settings.yml
myrm-agent-server/tests/: _ARCH.md  conftest.py  test_test_secrets.py
myrm-agent-server/tests/adapters/: test_optimization_repo.py  test_quality_repo.py  test_snapshot_repo.py  test_sqlalchemy_storage.py
myrm-agent-server/tests/aggregators/: __init__.py  test_sql_data_source.py
myrm-agent-server/tests/ai_agents/: test_agent_middlewares_exports.py  test_conversation_search_deferred_integration.py  test_conversation_search_eager_integration.py  test_conversation_search_opt_in_integration.py  test_conversation_search_setup.py  test_custom_agent_factory.py  test_personality_templates.py  test_prompt_integrity.py  test_team_protocol.py
myrm-agent-server/tests/api/: test_conversation_formatter_e2e.py  test_dev_gate_readiness.py  test_evolution_audit_api.py  (+12 more)
(+5863 files in other folders)
