[package]
name = "myrm-agent"
version = "0.1.0"
description = "MyrmAgent Desktop - Claw-class AI assistant for work automation"
authors = ["MyrmAgent Team"]
license = "MIT"
repository = "https://github.com/Pursue-LLL/myrm-agent"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process", "sync"] }
reqwest = { version = "0.11", features = ["json"] }
local-ip-address = "0.6"
# CLI Agent 支持
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-deep-link = "2.0"
tauri-plugin-global-shortcut = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
regex = "1.12.3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
enigo = { version = "0.2", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
