[project]
name = "skill-sandbox"
version = "1.0.0"
description = "Myrm Skill Sandbox: production-grade unified runtime environment"
requires-python = ">=3.13"

dependencies = [
  # ============================================
  # Data Science 数据科学
  # ============================================
  "pandas>=2.2",
  "numpy>=2.0",
  "scipy>=1.14",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",

  # ============================================
  # Visualization 可视化
  # ============================================
  "matplotlib>=3.9",
  "seaborn>=0.13",

  # ============================================
  # File Processing 文件处理
  # ============================================
  # Excel
  "openpyxl>=3.1",
  "xlsxwriter>=3.2",
  "xlrd>=2.0",

  # Word
  "python-docx>=1.1",

  # PowerPoint
  "python-pptx>=1.0",

  # PDF
  "pypdf>=4.0",
  "pdfplumber>=0.11",
  "pypdfium2>=4.28",
  "pdf2image>=1.17",
  "pdfkit>=1.0",
  "reportlab>=4.1",
  "img2pdf>=0.5",

  # Image
  "pillow>=11.0",

  # Data formats
  "pyarrow>=18.0",

  # ============================================
  # Math & Computing 数学与计算
  # ============================================
  "sympy>=1.13",
  "mpmath>=1.3",

  # ============================================
  # Utilities 工具
  # ============================================
  "tqdm>=4.66",
  "python-dateutil>=2.9",
  "pytz>=2024.1",
  "joblib>=1.4",

  # JSON/YAML
  "pyyaml>=6.0",
  "orjson>=3.10",

  # HTTP
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = []
